# cbp-ng

./: bar.py  branch_predictor.hpp  cbp_vfs.py  compile  compile_custom  graph.py  local_predictor_stats  new_tage.db  new_tage_optimization.py  plot.py  pyproject.toml  results2.csv  tage.db  tage_analysis.py  tage_optimization.py
cbp-ng_training_traces/: README
new_optuna_results/20260430_210223/: best_trial.json  trials_sorted.csv
optuna_results/20260423_181516/: best_trial.json  trials_sorted.csv
output_traces/: 508-namd-1_126793.out  abc-3.3561_0.out  brotli-1.6219_0.out  diamond-1.23658_0.out  flightdm-5.7254_0.out  gap-bc-coauthors_1971.out  h3geo-1.221409_0.out  highs-2.91059_0.out  java16-specjbb-64k-bigmem-ir1000.41720_0.out  lua-3.19933_0.out  minizinc-3.654_0.out  mlpack-1.43027_0.out  nab-2.5470_0.out  nest-1.1681_0.out  ntest-1.168389_0.out  ren-reactors-jdk17.15692_0.out  roms-1.109375_0.out  rsbench-1.730_0.out  rust-fasta-25M.612_0.out  sampleflow-1.127768_0.out  simpoint-1.87314_0.out  snappy-bm-zflatall_435.out  xz-2.22921_0.out  zstd-1.19139_0.out
predictors/: always_taken.hpp  global_predictor.hpp  local_predictor.hpp  new_tage.hpp  tournament_predictor.hpp  unrestricted.hpp
